1.修改日志打印，将打印的3个文件合并到一个文件 2.再pom里配置打包类型，打包名称，以及打包tomcat由外部提供 3.新增打包初始化程序 4.新增banner效果图，美化控制台 5.新增全局跨域配置 6.新增全局异常捕捉 7.解决Result枚举返回为null的异常 8.新增对mybatis操作数据库的示例 9.新增测试业务接口跟业务实现类

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,10 +21,10 @@ mybatis:
 
 
 
+#日志生成路径及日志级别
 log:
-  path: /logs/IrailLog
-  level: TRACE    #DEBUG
-  name:
-    info: IrailInfo
-    error: IrailError
-    sql: IrailSql
+  path: ../logs/logger  #日志路径
+  name: logger  #日志名称
+  level:
+    root: WARN  #普通日志级别   TRACE<DEBUG<INFO<WARN<ERROR<FATAL
+    sql: TRACE  #sql日志级别    TRACE<DEBUG
