新增通过thymeleaf整合html页面在springboot项目

--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,11 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+
 <!--        lombok注解依赖-->
         <dependency>
             <groupId>org.projectlombok</groupId>
